# xavier2

./: .cursorrules  .dockerignore  .env.example  .eslintrc.json  .git-atomize.yml  .gitignore  .windsurfrules  AGENTS.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG-MAY2026.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.simple  HEARTBEAT.md  IDENTITY.md  LICENSE  LICENSE.enterprise  PROMPT_GESTALT.md  PROMPT_HEXARCH.md  PROMPT_P1.md  PROMPT_SPAWN.md  README.md  SECURITY.md  SOUL.md  TASK_STATE.md  TOOLS.md  USER.md  build-err.txt  build-local.ps1  build-output-rrf.txt  build-output-rrf2.txt  build-output.txt  check_alerts.ps1  clippy_output.txt  closed_issues.json  codex_fix_next.md  consolidation_temp_0.txt  consolidation_temp_1.txt  (+34 more)
.agent/rules/: rule-0.md  rule-10-gitcore-cortex.md
.cargo/: audit_ignore.txt
.claude/: settings.local.json
.gitcore/: ARCHITECTURE.md  CLI_CONFIG.md  CONTEXT_LOG.md  PROJECT_README.md  SDLC_WORKFLOW.md  SKILLS_INDEX.md  SRC.md  SRC_CONFIG.md  STATE.md  TODO.md  change-control.yaml  features.json
.gitcore/planning/: PLANNING.md  TASK.md
.gitcore/rules/: GLOBAL_XAVIER_INTEGRATION.md
.github/: atomicity-config.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  devlog.md  feature.md  feature_request.md  phase4-jules.md  task.md
.github/instructions/: auto-context.instructions.md  claude-tools.instructions.md  claude.md  codex-tools.instructions.md  fallback-system.instructions.md  gemini-tools.instructions.md  grok-tools.instructions.md
.github/issues/: DEPRECATE_agent-feature-migration-to-skills.md  EPIC_v1-release-stabilization.md  FEAT_checkpoint_resume.md  FEAT_context-router.md  FEAT_evolve-module.md  FEAT_floating-config-ui.md  FEAT_lightweight-tui-dashboard.md  FEAT_missed_job_recovery.md  _TEMPLATE.md  (+15 more)
.openclaw/: workspace-state.json
REVIEWS/: code_audit.md
backup/: Cargo.toml.bak-surreal-fix  docker-compose.yml.bak-surreal-fix  manifest_2026-04-13T19-29-42_vec-build-test.json
benches/: api_v1.rs  cortex.rs  hybrid_search.rs
benchmarks/: SWAL_LOCOMO_BASELINE_2026-04-05.md  SWAL_LOCOMO_BASELINE_2026-04-07.md  SWAL_LOCOMO_BASELINE_2026-04-08.md  SWAL_LOCOMO_BASELINE_2026-04-09.md  SWAL_LOCOMO_BASELINE_2026-04-10.md  SWAL_LOCOMO_BASELINE_2026-04-11.md  SWAL_LOCOMO_BENCHMARK.md
code-graph/: Cargo.toml  Dockerfile  MANUAL.md  README.md  SPEC.md  stormideas.md
config/: xavier.config.json  xavier2.config.json
docker/: Dockerfile  Dockerfile.public  Dockerfile.simple  benchmark-runner.Dockerfile  docker-compose.benchmark.yml  docker-compose.benchmarks.yml  docker-compose.cortex-enterprise.yml  docker-compose.yml
docs/: ANTICIPATOR_ANALYSIS.md  ARCHITECTURE.md  BENCHMARK_COMPARISON.md  BENCHMARK_PLAN.md  CHANGELOG-MAY2026.md  CLI_FIRST_RESEARCH.md  CODE_REVIEW.md  CODE_REVIEW_CODEX.md  CODE_REVIEW_GEMINI.md  CODE_REVIEW_MAY2026.md  COMPETITIVE_ANALYSIS.md  CORTEX.md  CORTEX_NOTES.md  CORTEX_QUICK_REFERENCE.md  CORTEX_USAGE_GUIDE.md  DEPENDENCY_STRATEGY.md  DOCKER_DEPLOY.md  ENCRYPTION_SPEC.md  ENTERPRISE.md  FEATURE_STATUS.md  INFOGRAPHIC_SYSTEM.md  JULES_PROMPTS_MAY2026.md  JULES_WORKFLOW.md  KNOWN_VULNERABILITIES.md  MEMORY_MANAGER.md  MOBILE_GENERATIVE_UI.md  MULTI_AGENT_PIPELINE.md  MULTI_LAYER_MEMORY_SPEC.md  PHASE4_REVIEW.md  PRICING.md  PUBLIC_RELEASE_ROADMAP.md  README.md  REPO_RECONCILIATION_2026-05-08.md  ROADMAP.md  ROADMAP_v0.5.md  SECURITY.md  STORAGE_SWITCH.md  SWAL-ARCH.md  TODO.md  TOOLS.md  (+11 more)
examples/: README.md  cli.sh  http.sh  mcp.sh  wizard_screenshots.rs
memory/: 2026-05-01.md  2026-05-02.md  2026-05-03.md
notebooks/: fine_tune_swal_assistant.ipynb
panel-ui/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.generative.json  vite.config.ts
plugins/: chronicle_publish.rs
scripts/: Install-Xavier2DevTask.ps1  README.md  Stop-Xavier2DevCoordinator.ps1  api-test.ps1  benchmark_cortex_engram.py  benchmark_memory_systems.py  benchmark_multi_cli.py  build-docker.sh  build-local.ps1  build-monitor.ps1  build_synapse_dataset.py  check-cortex.ps1  check-env.ps1  check-surreal.ps1  cortex-backup-manager.js  cortex-client.js  cortex_cli.py  curate_memory_data.py  dismiss_alerts.ps1  dismiss_alerts2.ps1  dogfood-change-control.ps1  export_training_data.py  extract_comprehensive_training.py  final_benchmark.ps1  fix_closing.py  index-production-data.ps1  index-swal-code.js  locomo_benchmark.ps1  locomo_benchmark_clean.ps1  locomo_real_benchmark.ps1  memory_triad_benchmark.py  memory_triad_loop.ps1  migrate_business_lines.ps1  migrate_cortex.ps1  migrate_file_to_sqlite.py  migrate_file_to_surreal.py  migrate_soul.ps1  project_status_agent.py  project_status_agent_README.md  rate-manager.js  (+41 more)
skills/: prompt-decision-maker.md  prompt-question-board.md
src/: cli.rs  hooks.rs  lib.rs  main.rs  main_egui.rs  main_installer.rs  main_tui.rs  settings.rs  web.rs  workspace.rs
state/: models.json
tests/: benchmark.rs  change_control_test.rs  chronicle_harvest_test.rs  clavis_integration.rs  e2e.rs  hce_test.rs  integration.rs  settings_persistence_test.rs  sevier2_stress_test.rs  sevier_stress_test.rs  sync_check_handler_cached_result.rs  sync_test.rs  verification_test.rs  websocket_events.rs
web/: Cargo.toml  index.html  package.json  tailwind.config.js  vite.config.ts
web/agent-generative/: index.html
web/agent-ui/: index.html
web/chat/: index.html
web/chronicle/theme/: preview.html  script.js  styles.css  template.html
web/design-system/: index.html  package.json  tailwind.config.js
web/design-system/src/: App.tsx  index.ts
web/design-system/src/components/: Alert.tsx  BadgeRow.tsx  ChartBar.tsx  Checklist.tsx  Comparison.tsx  DividerStats.tsx  HeroBanner.tsx  IconStat.tsx  Leaderboard.tsx  ListCards.tsx  MetricBig.tsx  Minilist.tsx  Pipeline.tsx  Progress.tsx  Report.tsx  Sparkline.tsx  StatsRow.tsx  Timeline.tsx
web/notes/: index.html
web/src/: App.tsx  index.css  lib.rs
web/src/components/: AgentManager.tsx  Dashboard.tsx  Layout.tsx  MemoryBrowser.tsx  Settings.tsx
web/src/hooks/: useApi.ts
(+562 files in other folders)
